# Machine-Learning-Simple-Iris-classification

./: README.md  main.py  pyproject.toml
