[project]
name = "python_project"
version = "0.1.0"
description = "A simple Iris classification example using scikit-learn."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3"
]
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"